<resources>
    <string name="app_name">NotesApp</string>

    <!-- Для регистрации пользователя -->
    <string name="register_reg">Регистрация</string>
    <string name="password_reg">Пароль</string>
    <string name="repeat_password_reg">Повторите пароль</string>
    <string name="username_reg">Имя пользователя</string>
    <string name="email_reg">Email</string>
    <string name="register_btn_reg">Зарегистрироваться</string>
    <string name="auth_btn_reg">Войти</string>
    <string name="is_auth_reg">У вас уже есть аккаунт?</string>

    <!-- Для авторизации пользователя -->
    <string name="auth_auth">Вход</string>
    <string name="password_auth">Пароль</string>
    <string name="username_auth">Имя пользователя</string>
    <string name="email_auth">Email</string>
    <string name="auth_btn_auth">Войти</string>
    <string name="reg_btn_auth">Зарегистрироваться</string>
    <string name="is_reg_auth">У вас ещё нет аккаунта?</string>

    <!-- Для главного активити с нотпадами -->
    <string name="add_new_notepad_btn">Добавить блокнот</string>
    <string name="notepads">Блокноты</string>
    <string name="my_user_btn">Пользователь</string>

    <!-- Для активити c юзером -->
    <string name="username_user">Имя пользователя:</string>
    <string name="email_user">Почта:</string>
    <string name="username_user2">Ваше имя</string>
    <string name="email_user2">Ваша почта</string>
    <string name="logout_btn_user">Выход</string>
    <string name="return_btn_user">Назад</string>

    <!-- Для активити с заметками -->
    <string name="delete_notepad_btn_notes">Удалить блокнот</string>
    <string name="add_note_btn_notes">Добавить заметку</string>
    <string name="add_person_access_btn_notes">Добавить редактора</string>
    <string name="accesses_notes">Редакторы</string>
    <string name="notes_notes">Заметки</string>
    <string name="return_btn_notes">Назад</string>

    <!-- Для активити с заметой -->
    <string name="delete_note_btn_note">Удалить заметку</string>
    <string name="return_btn_note">Назад</string>
    <string name="add_person_access_btn_note">Добавить редактора</string>
    <string name="save_btn_note">Сохранить заметку</string>
    <string name="name_note">Название заметки</string>
    <string name="accesses_note">Редакторы</string>
    <string name="input_text_note">Введите текст заметки…</string>
</resources>